[horizontal scroll] # fixed the horizontal scroll caused by carousel

--- a/app/styles/_carousel.scss
+++ b/app/styles/_carousel.scss
@@ -26,7 +26,7 @@
     margin-left: -12px;
     overflow: hidden;
     position: absolute;
-    width: 980px;
+    max-width: 980px;
 }
 #myCarouselSec4 .fp-tableCell{
     display:block;
